--- a/Memoria/capitulos/01_Introduccion.tex
+++ b/Memoria/capitulos/01_Introduccion.tex
@@ -1,5 +1,7 @@
     \chapter{Introducción}
     \section{Motivacion}
+    La música siempre ha sido una de las aficiones más comunes entre los seres humanos.
     \section{Descripción del problema}
+    
     \section{Objetivos}
 
