--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -204,13 +204,13 @@
 
    \input{capitulos/05_Analisis}
    
-   %\input{capitulos/06_Diseno}
-   %
-   %\input{capitulos/07_Implementacion}
-   %
-   %\input{capitulos/08_Pruebas}
-   %
-   %\input{capitulos/09_Conclusiones}
+   \input{capitulos/06_Diseño}
+   
+   \input{capitulos/07_Implementacion}
+   
+   \input{capitulos/08_Pruebas}
+   
+   \input{capitulos/09_Conclusion}
 %
 %%\chapter{Conclusiones y Trabajos Futuros}
 %
