--- a/Memoria/capitulos/01_Introduccion.tex
+++ b/Memoria/capitulos/01_Introduccion.tex
@@ -1,7 +1,43 @@
-    \chapter{Introducción}
-    \section{Motivacion}
-    La música siempre ha sido una de las aficiones más comunes entre los seres humanos.
-    \section{Descripción del problema}
-    
-    \section{Objetivos}
+\chapter{Introducción}
+La música ha sido siempre una parte importante de la vida de las personas y una pieza clave y fundamental en nuestra sociedad y en nuestras tradiciones.
+Escuchamos canciones mientras andamos por la calle, cuando cocinamos, mientras hacemos ejercicio, conduciendo en el coche... La música está presente en gran
+parte de nuestra vida cotidiana
+y de nuestra cultura y es por esto que, además de ser considerada una de las bellas artes, mucha gente se dedica a estudiarla y a aprender sobre ella.
+
+Sin embargo, por desgracia a lo largo de la historia el aprendizaje de la música ha sido elitista y la
+gente con pocos recursos económicos no ha podido acceder a gran parte del conocimiento. En la antigüedad solo
+las familias nobles y adineradas podían disfrutar de las melodías clásicas. Puede parecer que no, pero incluso en la actualidad,
+aunque mucho menos, la formación musical a veces puede ser vista como un privilegio reservado para unos pocos, pues solo
+quienes pueden permitirse ir a una escuela de música o conservatorio pueden llegar a ese conocimiento.
+
+Con la revolución digital y el surgimiento del software, la forma en la que consumimos música ha cambiado radicalmente.
+Ahora, gracias a algunas aplicaciones, podemos acceder a una gran cantidad de temas y canciones de forma gratuita y sencilla.
+No podemos imaginarnos nuestro día a día sin las aplicaciones que nos ofrecen música en streaming.
+
+Pero, ¿qué pasa con el acceso a el aprendizaje musical? ¿Ha habido realmente un cambio en la forma en la que se estudia y/o practica música
+con la aparación de los dispositivos móviles, de internet y de las aplicaciones software? ¿Es posible aprender música de forma autodidacta y
+gratuita?
+
+
+\section{Motivacion}
+El acceso a la música es un derecho fundamental de todas las personas y siempre lo he creído así. El surgimiento de nuevas
+aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas de idiomas, matemáticas, geografía, etc me ha hecho pensar
+en lo útiles que pueden llegar a ser para personas con pocos recursos que busquen una forma rápida y sencilla de aprender sobre algún tema
+en específico fácilmente.
+
+Por otro lado, mi experiencia estudiando en una escuela de música durante 6 años me ha hecho entender que el aprendizaje musical, pese a ser un proceso complejo y exigente,
+es gratificante y satisfactorio; y que cualquier persona, tenga o no recursos económicos, debe poder aprender música y disfrutar de ella sin impedimentos y al alcance de su mano.
+
+Al unir el surgimiento de distintas aplicaciones software educativas con mi experiencia en el conservatorio, se me ocurrió
+la aparición de un sistema de aprendizaje musical que permita a cualquier persona, independientemente
+de su nivel original de conocimientos musicales, aprender conceptos básicos e intermedios sobre lenguaje musical asi como
+instruirse para empezar a tocar instrumentos musicales con un enfoque didáctico, divertido y progresivo.
+
+
+
+\section{Descripción del problema}
+
+
+
+\section{Objetivos}
 
