--- a/Memoria/capitulos/01_Introduccion.tex
+++ b/Memoria/capitulos/01_Introduccion.tex
@@ -1,18 +1,19 @@
 \chapter{Introducción}
-La música ha sido siempre una parte importante de la vida de las personas y una pieza clave y fundamental en nuestra sociedad y en nuestras tradiciones.
-Escuchamos canciones mientras andamos por la calle, cuando cocinamos, mientras hacemos ejercicio, conduciendo en el coche... La música está presente en gran
-parte de nuestra vida cotidiana
-y de nuestra cultura y es por esto que, además de ser considerada una de las bellas artes, mucha gente se dedica a estudiarla y a aprender sobre ella.
+Desde el inicio de la humanidad, la música ha sido siempre una parte muy importante de la vida de la mayoría de personas y a día de hoy, es una pieza clave
+ y fundamental en nuestra sociedad y en nuestras tradiciones. Escuchamos canciones mientras andamos por la calle, 
+ cuando cocinamos, mientras hacemos ejercicio, conduciendo en el coche... La música está presente en gran
+parte de nuestros hábitos y de nuestra cultura y es por esto que, además de ser considerada una de las
+ bellas artes, mucha gente se dedica a estudiarla y a aprender sobre ella.
 
-Sin embargo, por desgracia a lo largo de la historia el aprendizaje de la música ha sido elitista y la
-gente con pocos recursos económicos no ha podido acceder a gran parte del conocimiento. En la antigüedad solo
-las familias nobles y adineradas podían disfrutar de las melodías clásicas. Puede parecer que no, pero incluso en la actualidad,
+Sin embargo, por desgracia a lo largo de la historia el aprendizaje del lenguaje musical ha sido elitista y la mayoría
+de personas con pocos recursos económicos no ha podido acceder a gran parte de este conocimiento. Antiguamente, solo
+las familias nobles y adineradas podían darse el lujo de disfrutar de las melodías clásicas. Puede parecer que no, pero incluso en la actualidad,
 aunque mucho menos, la formación musical a veces puede ser vista como un privilegio reservado para unos pocos, pues solo
-quienes pueden permitirse ir a una escuela de música o conservatorio pueden llegar a ese conocimiento.
+quienes pueden permitirse ir a una escuela de música o conservatorio pueden llegar a ese aprendizaje.
 
 Con la revolución digital y el surgimiento del software, la forma en la que consumimos música ha cambiado radicalmente.
 Ahora, gracias a algunas aplicaciones, podemos acceder a una gran cantidad de temas y canciones de forma gratuita y sencilla.
-No podemos imaginarnos nuestro día a día sin las aplicaciones que nos ofrecen música en streaming.
+El impacto ha sido tan fuerte que prácticamente no podemos imaginarnos nuestro día a día sin estas aplicaciones que nos ofrecen música en streaming.
 
 Pero, ¿qué pasa con el acceso a el aprendizaje musical? ¿Ha habido realmente un cambio en la forma en la que se estudia y/o practica música
 con la aparación de los dispositivos móviles, de internet y de las aplicaciones software? ¿Es posible aprender música de forma autodidacta y
@@ -21,23 +22,33 @@ gratuita?
 
 \section{Motivacion}
 El acceso a la música es un derecho fundamental de todas las personas y siempre lo he creído así. El surgimiento de nuevas
-aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas de idiomas, matemáticas, geografía, etc me ha hecho pensar
-en lo útiles que pueden llegar a ser para personas con pocos recursos que busquen una forma rápida y sencilla de aprender sobre algún tema
-en específico fácilmente.
+aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas en distintos ámbitos como idiomas, matemáticas, geografía, etc, me ha hecho pensar
+en lo útiles que pueden llegar a ser estas para personas con pocos recursos que buscan una forma rápida, barata y sencilla de aprender sobre algún tema
+en específico.
 
 Por otro lado, mi experiencia estudiando en una escuela de música durante 6 años me ha hecho entender que el aprendizaje musical, pese a ser un proceso complejo y exigente,
-es gratificante y satisfactorio; y que cualquier persona, tenga o no recursos económicos, debe poder aprender música y disfrutar de ella sin impedimentos y al alcance de su mano.
+es gratificante y satisfactorio; y que cualquier persona, tenga o no recursos económicos, debería tener la oportunidad de poder aprender música y disfrutar de ella sin impedimentos.
+La música y la formación en esta debería ser accesible para cualquier persona.
 
 Al unir el surgimiento de distintas aplicaciones software educativas con mi experiencia en el conservatorio, se me ocurrió
-la aparición de un sistema de aprendizaje musical que permita a cualquier persona, independientemente
+la idea de desarrollar un sistema de aprendizaje musical que permita a cualquier persona, independientemente
 de su nivel original de conocimientos musicales, aprender conceptos básicos e intermedios sobre lenguaje musical asi como
 instruirse para empezar a tocar instrumentos musicales con un enfoque didáctico, divertido y progresivo.
 
+Todo esto y la falta de aplicaciones similares en el mercado han convertido en una necesidad el desarrollo de este proyecto.
 
+\section{Descripción del problema y objetivos}
+Se pretende desarrollar una aplicación software que permita al usuario aprender conceptos de lenguaje musical de forma autodidacta y sencilla,
+proporcionando un enfoque que anime a las personas a involucrarse en la adquisición de conocimientos y a entender muchísimos conceptos que la envuelven, desde el lenguaje musical
+hasta la práctica de un instrumento. 
 
-\section{Descripción del problema}
+También se desea un sistema que proporcione una metodología de enseñanza lúdica y divertida, 
+con un progreso organizado en logros y niveles que permita a los usuarios sentirse satisfechos con su progreso y motivados a seguir aprendiendo. 
+Los usuarios podrán ver su progreso mediante un sistema de cuentas de usuario que permitirá tambien la posibilidad de compartir sus logros con otros usuarios.
 
+Otro de los objetivos será incorporar distintos tipos de ejercicios y actividades que faciliten este aprendizaje, como por ejemplo la inclusión de un sistema que detecte las notas musicales
+tocadas por el usuario. 
 
-
-\section{Objetivos}
+Por último, se creará una aplicación web para la gestión de los usuarios y la administración de los contenidos de la aplicación móvil, siendo una 
+herramienta más para administradores y personal encargado de la aplicación.
 
