--- a/Memoria/capitulos/02_EstadoDelArte.tex
+++ b/Memoria/capitulos/02_EstadoDelArte.tex
@@ -1,3 +1,18 @@
     \chapter{Estado del Arte}
     \section{Software a desarrollar}
+    \subsection{Duolingo}
+    \subsection{**}
+    \subsection{*}
+
+
+
+
     \section{Desarrollo de Software}
+\subsection{Flutter}
+\subsection{Kotlin}
+\subsection{React native}
+\subsection{NodeJS}
+
+\subsection{React}
+\subsection{Angular}
+\subsection{SQL}
