Avanzado Capitulo 2 y mejorado el 1

--- a/Memoria/capitulos/01_Introduccion.tex
+++ b/Memoria/capitulos/01_Introduccion.tex
@@ -1,6 +1,6 @@
 \chapter{Introducción}
 Desde el inicio de la humanidad, la música ha sido siempre una parte muy importante de la vida de la mayoría de personas y a día de hoy, es una pieza clave
- y fundamental en nuestra sociedad y en nuestras tradiciones. Escuchamos canciones mientras andamos por la calle, 
+ y fundamental en nuestra sociedad y en nuestras tradiciones. Escuchamos canciones a todas horas: mientras andamos por la calle, 
  cuando cocinamos, mientras hacemos ejercicio, conduciendo en el coche... La música está presente en gran
 parte de nuestros hábitos y de nuestra cultura y es por esto que, además de ser considerada una de las
  bellas artes, mucha gente se dedica a estudiarla y a aprender sobre ella.
@@ -21,22 +21,27 @@ gratuita?
 
 
 \section{Motivacion}
-El acceso a la música es un derecho fundamental de todas las personas y siempre lo he creído así. El surgimiento de nuevas
-aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas en distintos ámbitos como idiomas, matemáticas, geografía, etc, me ha hecho pensar
-en lo útiles que pueden llegar a ser estas para personas con pocos recursos que buscan una forma rápida, barata y sencilla de aprender sobre algún tema
-en específico.
+El surgimiento de nuevas aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas en distintos ámbitos como idiomas, matemáticas, geografía, etc, 
+me ha hecho pensar en lo útiles que pueden llegar a ser estas para personas con pocos recursos que buscan una forma rápida, barata y sencilla de aprender sobre
+algún tema en específico. El acceso a la música es algo fundamental que todas las personas deberían tener al alcance y siempre lo he creído así. 
+
+En cuanto al aprendizaje musical, al ser relacionado con la música clásica y tradicional, suele ser visto como algo aburrido,
+por lo que muchos no se llegan a interesar por esto o suelen abandonar su formación en mitad de esta.
+Sin desprestigiar las clases de música tradicionales, el mundo está cambiando y tengo la sensación de que la docencia musical se ha quedado atrás y no se ha adaptado
+a las necesidades de los jóvenes ni de la sociedad actual.
+Habiendo pocas opciones que ofrezcan un aprendizaje de la música de forma divertida y lúdica, muchas personas pierden una oportunidad valiosa de llegar a un mundo muy valioso.
 
 Por otro lado, mi experiencia estudiando en una escuela de música durante 6 años me ha hecho entender que el aprendizaje musical, pese a ser un proceso complejo y exigente,
 es gratificante y satisfactorio; y que cualquier persona, tenga o no recursos económicos, debería tener la oportunidad de poder aprender música y disfrutar de ella sin impedimentos.
 La música y la formación en esta debería ser accesible para cualquier persona.
 
-Al unir el surgimiento de distintas aplicaciones software educativas con mi experiencia en el conservatorio, se me ocurrió
-la idea de desarrollar un sistema de aprendizaje musical que permita a cualquier persona, independientemente
+Al unir el surgimiento de distintas aplicaciones software educativas que ofrecen una visión novedosa y entretenida del aprendizaje con mi experiencia en 
+el conservatorio de música, se me ocurrió la idea de desarrollar un sistema de aprendizaje musical que permita a cualquier persona, independientemente
 de su nivel original de conocimientos musicales, aprender conceptos básicos e intermedios sobre lenguaje musical asi como
-instruirse para empezar a tocar instrumentos musicales con un enfoque didáctico, divertido y progresivo.
+la posibilidad de instruirse para empezar a tocar instrumentos musicales con un enfoque didáctico, divertido y progresivo.
 
-Todo esto y la falta de aplicaciones similares en el mercado han convertido en una necesidad el desarrollo de este proyecto.
-
+Todo esto y la falta de aplicaciones similares y de calidad en el mercado respecto al conocimiento musical, han convertido en una necesidad el desarrollo de este proyecto.
+\newpage
 \section{Descripción del problema y objetivos}
 Se pretende desarrollar una aplicación software que permita al usuario aprender conceptos de lenguaje musical de forma autodidacta y sencilla,
 proporcionando un enfoque que anime a las personas a involucrarse en la adquisición de conocimientos y a entender muchísimos conceptos que la envuelven, desde el lenguaje musical
