--- a/Memoria/capitulos/02_EstadoDelArte.tex
+++ b/Memoria/capitulos/02_EstadoDelArte.tex
@@ -1,9 +1,48 @@
     \chapter{Estado del Arte}
     \section{Software a desarrollar}
-    \subsection{Duolingo}
-    \subsection{**}
-    \subsection{*}
+    \subsection{Aplicaciones de aprendizaje}
+    Actualmente existen numerosas aplicaciones que ayudan a la adquisición de conocimientos de distintos temas, 
+    como los idiomas, las matemáticas o la teoría para la conducción de un vehículo, entre otros. A continuación se
+    detallarán las aplicaciones más destacadas.
+   
+    \subsubsection{Duolingo}
+    \begin{wrapfigure}{r}{0.25\textwidth}
+        \vspace*{-0.4cm}
 
+        \centering
+        \includegraphics[width=0.2\textwidth]{imagenes/c2/duolingo.png}
+        \caption{Logo de Duolingo}
+        \vspace*{-0.15cm}
+    \end{wrapfigure}
+
+    Duolingo es una de las aplicaciones más populares que existen para aprender idiomas. Esta aplicación se basa en el método
+    de aprendizaje por inmersión, en el que el usuario estudia el idioma mediante una serie de actividades lúdicas.
+    La aplicación se divide en lecciones o temas, las cuales contienen una serie de ejercicios que el usuario debe
+    completar para ir avanzando por las distintas secciones. Estos ejercicios son muy variados y consisten en, por ejemplo,
+    la traducción de palabras o frases con el teclado, la traducción de estas seleccionando bloques de palabras, la
+    pronunciación de palabras o frases mediante el micrófono del dispositivo, la selección de imágenes, etc. Además,
+    Duolingo ofrece en cada lección, antes de cada ejercicio, una breve explicación de la gramática o vocabulario con
+    imágenes y explicaciones sencillas. Esta aplicación es gratuita (aunque tiene mejoras de pago dentro de esta) 
+    y está disponible para dispositivos móviles (Android, iOS y Windows Phone).
+ 
+    \subsubsection{FisicaMaster \& QuímicaMaster}
+
+    \subsubsection{BMath}
+
+
+    \subsubsection{Academons}
+
+    \subsection{Aplicaciones de aprendizaje musical}
+    Centrándonos ya en el tema que nos ocupa, el aprendizaje musical, existen numerosas aplicaciones que ayudan a la adquisición
+    de conocimientos musicales o a la ayuda a aprender a tocar un instrumento musical. Algunas de estas aplicaciones son:
+
+    \subsubsection{--}
+    \subsubsection{--}
+    \subsubsection{--}
+
+    \subsubsection{Guitar Pro}
+
+  
 
 
 
