--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -63,6 +63,7 @@
 \usepackage{url}
 \usepackage{colortbl,longtable}
 \usepackage[stable]{footmisc}
+\usepackage{wrapfig}
 %\usepackage{index}
 
 %\makeindex
