Estado del arte avanzado

--- a/Memoria/capitulos/02_EstadoDelArte.tex
+++ b/Memoria/capitulos/02_EstadoDelArte.tex
@@ -131,14 +131,56 @@ Flutter está basado en el concepto de widgets, los cuales son elementos gráfic
 
 \subsection{React Native}
 Framework de código abierto creado por Meta Platforms y destinado al desarrollo de aplicaciones Android, iOS, Web, Windows...
-Está basado en Javascript y React y permite crear aplicaciones nativas multiplataforma.
+Está basado en Javascript y React y permite crear aplicaciones nativas multiplataforma. La diferencia con React es que, en lugar de 
+trabajar con el navegador, trabaja con las plataformas móviles. 
 
+Esta tecnología permite construir aplicaciones móvile susando solamente Javascript, con el mismo diseño que utiliza
+Reac permitiendote realizar una interfaz de usuario completa mediante componentes. 
 
+\begin{itemize}
+    \item \textbf{Código compartido:} tu código puede ser compartido para diferentes plataformas
+    \item \textbf{Comunidad:} Existe una amplia comunidad sobre React y React Native, lo cual permite encontrar soluciones a los problemas que se puedan presentar en el desarrollo
+\end {itemize}
+
+Como desventaja, encontramos una limitación en los componentes nativos, pues seguramente se necesite escribir algo de código
+específico para un plataforma en concreto
 \subsection{Dart}
+Dart es un lenguaje de programación de código abierto desarrollado por Google y es utilizado por Flutter.
+Es  orientado a objetos y de tipado estático. Surgió en 2011 como alternativa a Javascript.
+
+Dart posee las siguientes ventajas:
+
+\begin{itemize}
+    \item \textbf{Lenguaje fácil y sencillo} de aprender
+    \item \textbf{Acceso gratuito}
+    \item \textbf{Funciona en todas las plataformas}
+    \item \textbf{Programación estructurada y flexible}
+    \item \textbf{Orientado a objetos:} Facilita la encapsulación y reutilización de código gracias al uso de clases.
+     
+\end{itemize}
+
 \subsection{Kotlin}
+Kotlin es un lenguaje de programación construido sobre Java, desarrollado por JetBrains y lanzado en 2016.
+Es orientado a objetos y tiene tipado estático. 
+
+Algunas de sus ventajas son:
+\begin{itemize}
+    \item \textbf{Compatibilidad con Java:} permite utilizar código Java en Kotlin y viceversa
+    \item \textbf{Lenguaje fácil y sencillo} de aprender y usar
+    \item \textbf{Exactitud y claridad}: reduce el código repetido de forma sustancial y disminuye la probabilidad de error.
+
+\end{itemize}
+
 
 \subsection{NodeJS}
+NodeJS es un entorno en tiempo de ejecución de código abierto, del lado del servidor y programado en Javascript. 
+Es asíncrono y dirigido por eventos. Node es utilizado para el desarrollo de aplicaciones de red escalabes y rápidas, ofreciendo beneficios
+en rendimiento, velocidad de desarrollo...
+\subsection{Angular}
+Angular es un framework de código abierto para el desarrollo de aplicaciones web y móviles. Está basado en TypeScript y es desarrollado por Google.
 
 \subsection{React}
-\subsection{Angular}
-\subsection{SQL}
+\subsection{MariaDB}
+MariaDB es un sistema de gestión de bases de datos relacional de código abierto. Es un fork de MySQL, desarrollado por la comunidad de usuarios de MySQL.
+
+
